tests/ui/typeck/issue-83693.stderr
error[E0412]: cannot find type `F` in this scope
  --> $DIR/issue-83693.rs:6:6
   |
LL | impl F {
   |      ^ help: a trait with a similar name exists: `Fn`
   |
  --> $SRC_DIR/core/src/ops/function.rs:LL:COL
   |
   = note: similarly named trait `Fn` defined here

error[E0412]: cannot find type `TestResult` in this scope
  --> $DIR/issue-83693.rs:9:22
   |
LL |         <Self as Fn(&TestResult)>::call
   |                      ^^^^^^^^^^ not found in this scope

error[E0412]: cannot find type `x` in this scope
  --> $DIR/issue-83693.rs:16:6
   |
LL |     <x as Fn(&usize)>::call
   |      ^ not found in this scope

error[E0229]: associated item constraints are not allowed here
  --> $DIR/issue-83693.rs:9:18
   |
LL |         <Self as Fn(&TestResult)>::call
   |                  ^^^^^^^^^^^^^^^ associated item constraint not allowed here

error[E0229]: associated item constraints are not allowed here
  --> $DIR/issue-83693.rs:16:11
   |
LL |     <x as Fn(&usize)>::call
   |           ^^^^^^^^^^ associated item constraint not allowed here

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0229, E0412.
For more information about an error, try `rustc --explain E0229`.
